# LArContent

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  ChangeLog.txt  Documentation.txt  Jenkinsfile  Makefile  README.md
Modules/: CMakeLists.txt  FindLCContent.cmake  FindPandoraMonitoring.cmake  FindPandoraSDK.cmake
bdtTrainingAndOutputs/: BdtExampleNoChargeInfo_NTrees_800_TreeDepth_3.pkl  BdtExampleNoChargeInfo_NTrees_800_TreeDepth_3.xml  BdtExample_NTrees_800_TreeDepth_3.pkl  BdtExample_NTrees_800_TreeDepth_3.xml  PandoraBDT_TrainingOutput_Hierarchy_MLnoChargeInfo.txt  PandoraSettings_Master_DUNEFD.xml  PandoraSettings_Neutrino_DUNEFD.xml  TrainingPandoraBdt.py
cmake/: LArContentConfig.cmake.in  LArContentConfigVersion.cmake.in  LArContent_sources.cmake  LArDLContentConfig.cmake.in  LArDLContentConfigVersion.cmake.in  LArDLContent_sources.cmake  LArPandoraContentConfig.cmake.in  LArPandoraContentConfigVersion.cmake.in  cetmodules_build.cmake  standalone_build.cmake
include/: BoundedClusterMergingAlgorithm.h  ClusterAssociationAlgorithm.h  ClusterCreationAlgorithm.h  ClusterExtensionAlgorithm.h  ClusterMergingAlgorithm.h  ConeBasedMergingAlgorithm.h  EventPreparationAlgorithm.h  IsolatedHitMergingAlgorithm.h  KinkSplittingAlgorithm.h  LArBFieldCalculator.h  LArClusterHelper.h  LArContent.h  LArContentFast.h  LArGeometryHelper.h  LArParticleId.h  LArPointingCluster.h  LArPointingClusterHelper.h  LArPseudoLayerCalculator.h  (+15 more)
larpandoracontent/LArContent/include/: CMakeLists.txt  LArContent.h
larpandoracontent/LArContent/include/LArCheating/: CheatingClusterCreationAlgorithm.h
larpandoracontent/LArContent/include/LArCustomParticles/: TrackParticleBuildingAlgorithm.h
larpandoracontent/LArContent/include/LArHelpers/: LArMCParticleHelper.h  LArMonitoringHelper.h  LArVertexHelper.h
larpandoracontent/LArContent/include/LArPersistency/: EventReadingAlgorithm.h
larpandoracontent/LArContent/include/LArPlugins/: CMakeLists.txt  LArTransformationPlugin.h
larpandoracontent/LArContent/include/LArStitching/: CMakeLists.txt  MultiPandoraApi.h
larpandoracontent/LArContent/include/LArThreeDReco/: CMakeLists.txt
larpandoracontent/LArContent/include/LArThreeDReco/LArEventBuilding/: NeutrinoPropertiesAlgorithm.h
larpandoracontent/LArContent/include/LArThreeDReco/LArHitCreation/: HitCreationBaseTool.h
larpandoracontent/LArContent/include/LArThreeDReco/LArPfoMopUp/: VertexBasedPfoMergingAlgorithm.h
larpandoracontent/LArContent/include/LArThreeDReco/LArThreeDBase/: ThreeDBaseAlgorithm.h
larpandoracontent/LArContent/include/LArThreeDReco/LArTransverseTrackMatching/: LongTracksTool.h  OvershootTracksTool.h  ThreeDTransverseTracksAlgorithm.h  TrackSplittingTool.h
larpandoracontent/LArContent/include/LArTwoDReco/: CMakeLists.txt
larpandoracontent/LArContent/include/LArTwoDReco/LArClusterAssociation/: SimpleClusterGrowingAlgorithm.h
larpandoracontent/LArContent/include/LArTwoDReco/LArClusterCreation/: TrackClusterCreationAlgorithm.h
larpandoracontent/LArContent/include/LArTwoDReco/LArClusterMopUp/: BoundedClusterMergingAlgorithm.h
larpandoracontent/LArContent/include/LArTwoDReco/LArClusterSplitting/: LayerSplittingAlgorithm.h  TrackConsolidationAlgorithm.h  TwoDSlidingFitConsolidationAlgorithm.h
larpandoradlcontent/: CMakeLists.txt  LArDLContent.cc  LArDLContent.h
larpandoradlcontent/LArCheating/: DLCheatHierarchyTool.cc  DLCheatHierarchyTool.h  MLPCheatHierarchyTool.cc  MLPCheatHierarchyTool.h
larpandoradlcontent/LArControlFlow/: DLMasterAlgorithm.cc  DLMasterAlgorithm.h
larpandoradlcontent/LArDeepLearning/: DeepLearningTrackShowerIdAlgorithm.cc  DeepLearningTrackShowerIdAlgorithm.h
larpandoradlcontent/LArEventClassification/: CNNTrackShowerCountingAlgorithm.cc  CNNTrackShowerCountingAlgorithm.h
larpandoradlcontent/LArHelpers/: LArCanvasHelper.cc  LArCanvasHelper.h  LArDLHelper.cc  LArDLHelper.h  LArDLShowerHelper.cc  LArDLShowerHelper.h
larpandoradlcontent/LArMonitoring/: DlHitValidationAlgorithm.cc  DlHitValidationAlgorithm.h
larpandoradlcontent/LArObjects/: VertexTuple.cc  VertexTuple.h
larpandoradlcontent/LArShowerGrowing/: DLTwoDShowerGrowingAlgorithm.cc  DLTwoDShowerGrowingAlgorithm.h
larpandoradlcontent/LArSignalId/: .DlSignalAlgorithm.cc.swp  DlSNSignalAlgorithm.cc  DlSNSignalAlgorithm.h  DlSignalAlgorithm.cc  DlSignalAlgorithm.h
larpandoradlcontent/LArThreeDReco/LArEventBuilding/: DLBaseHierarchyTool.cc  DLBaseHierarchyTool.h  DLLaterTierHierarchyTool.cc  DLLaterTierHierarchyTool.h  DLNeutrinoHierarchyAlgorithm.cc  DLNeutrinoHierarchyAlgorithm.h  DLPrimaryHierarchyTool.cc  DLPrimaryHierarchyTool.h  LArHierarchyPfo.h  MLPBaseHierarchyTool.cc  MLPBaseHierarchyTool.h  MLPLaterTierHierarchyTool.cc  MLPLaterTierHierarchyTool.h  MLPNeutrinoHierarchyAlgorithm.cc  MLPNeutrinoHierarchyAlgorithm.h  MLPPrimaryHierarchyTool.cc  MLPPrimaryHierarchyTool.h
larpandoradlcontent/LArThreeDReco/LArShowerMatching/: DLMultiViewMatchingAlgorithm.cc  DLMultiViewMatchingAlgorithm.h  DLThreeViewClearShowersTool.cc  DLThreeViewClearShowersTool.h  DLThreeViewMergeAndCreateShowersTool.cc  DLThreeViewMergeAndCreateShowersTool.h  DLTwoViewClearShowersTool.cc  DLTwoViewClearShowersTool.h  DLTwoViewMergeAndCreateShowersTool.cc  DLTwoViewMergeAndCreateShowersTool.h
larpandoradlcontent/LArTrackShowerId/: DlClusterCharacterisationAlgorithm.cc  DlClusterCharacterisationAlgorithm.h  DlHitTrackShowerIdAlgorithm.cc  DlHitTrackShowerIdAlgorithm.h  DlPfoCharacterisationAlgorithm.cc  DlPfoCharacterisationAlgorithm.h  DlTrackCharacterisationAlgorithm.cc  DlTrackCharacterisationAlgorithm.h
larpandoradlcontent/LArTwoDReco/: DLThreeDClusterSplittingAlgorithm.cc  DLThreeDClusterSplittingAlgorithm.h  DlClusterAlgorithm.cc  DlClusterAlgorithm.h  DlTrackShowerStreamSelectionAlgorithm.cc  DlTrackShowerStreamSelectionAlgorithm.h
larpandoradlcontent/LArVertex/: DlSecondaryVertexingAlgorithm.cc  DlSecondaryVertexingAlgorithm.h  DlVertexingAlgorithm.cc  DlVertexingAlgorithm.h  DlVertexingBaseAlgorithm.cc  DlVertexingBaseAlgorithm.h
(+2146 files in other folders)
